* add namespace for android. * upgrade dependencies.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,6 +25,10 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
+    if (project.android.hasProperty("namespace")) {
+        namespace 'com.datadirr.open_share_plus'
+    }
+
     compileSdkVersion 31
 
     compileOptions {
